dark mode moon rotation on hover

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -6,21 +6,34 @@
   --gap-xlg: 48px;
 
 
-  --color-primary: #0a192f;
+  --color-primary: #f1f1f1;
   --color-primary-light: #152640;
-  --color-secondary: #E684AF;
-  --color: #fff;
+  --color-secondary: #EEC413;
+  --color: #000;
 
+
+
+  --bg-toolitip: #555;
+  --bg-clipboard: #666;
+
+  --color-toolitip: #fff;
+  --color-clipboard: #fff;
+  --color-action: #1a73e8;
+
+  --color-active: #fff;
 
   &.theme--night {
     --color-primary: #0a192f;
     --color-primary-light: #152640;
     --color-secondary: #E684AF;
 
-    --color-action: #1a73e8;
+    --color-active: #fff;
+
     --color-link: hsla(0, 0%, 100%, .5);
 
     --bg-toolitip: #555;
     --bg-clipboard: #666;
+    --color: #fff;
+
   }
 }
