--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -46,6 +46,7 @@ h2, b {
 
   .tooltip {
     background: var(--bg-toolitip);
+    color: var(--color-toolitip);
     padding: 4px 8px;
     position: absolute;
     top: 120%;
@@ -56,6 +57,7 @@ h2, b {
     opacity: 0;
     z-index: 8;
     border-radius: 3px;
+
   }
 
 }
@@ -64,7 +66,6 @@ h2, b {
 body {
   background: var(--color-primary);
   color: var(--color);
-  transition: color, background;
 }
 
 header {
@@ -117,7 +118,7 @@ header {
     }
 
     &__link.is--active {
-      color: var(--color-white);
+      color: var(--color-active);
     }
 
     li {
@@ -137,6 +138,7 @@ header {
 .clipboard-message {
   width: 280px;
   background: var(--bg-clipboard);
+  color: var(--color-clipboard);
   padding: 12px 16px;
   position: fixed;
   visibility: hidden;
