--- a/src/sass/components/_theme-toggle.scss
+++ b/src/sass/components/_theme-toggle.scss
@@ -15,17 +15,16 @@
     height: 37px;
     border-radius: 50%;
     border: 4px solid var(--color-primary);
-    transition: .3s all;
   }
 
   .sun__ray {
     width: 2px;
     background: var(--color-secondary);
     display: block;
-    height: 124.5%;
+    height: 121%;
     position: absolute;
     z-index: -1;
-    transition: .4s all linear;
+    transition: .4s all, height .3s ease-in-out;
 
     $columns: 12;
     @for $i from 1 through $columns {
@@ -35,47 +34,21 @@
     }
   }
 
-  &:hover .sun {
-    transform: scale(1.04);
-  }
 
-
-}
-
-not(.theme--night) .theme-toggle:hover .sun__ray {
-  $columns: 12;
-  @for $i from 1 through $columns {
-    &:nth-child(#{$i}) {
-      transform: rotate(calc(calc(#{$i} * calc(360deg / #{$columns})) - 15deg)) scale(1.04);
-    }
-  }
-}
-
-.theme--night {
-
-  .theme-toggle:hover .sun {
-    transition: none;
-  }
-
-
-  .sun:hover {
-    transform: scale(1);
-  }
-
-   .sun__ray {
+  &:hover .sun__ray {
     $columns: 12;
+
     @for $i from 1 through $columns {
       &:nth-child(#{$i}) {
-        transform: scale(0) rotate(calc(calc(#{$i} * calc(360deg / #{$columns})) - 35deg)) scale(1.04);
+        transform: rotate(calc(calc(#{$i} * calc(360deg / #{$columns})) - 20deg));
       }
     }
   }
 }
 
-
 .moon {
-  height: 29px;
-  width: 29px;
+  height: 28px;
+  width: 28px;
   position: absolute;
   background: var(--color-primary);
   border-radius: 50%;
@@ -83,9 +56,35 @@ not(.theme--night) .theme-toggle:hover .sun__ray {
   right: 0;
   transform: scale(0) translate(25%, -25%);
   z-index: 9;
-  transition: .3s all
+  transition: .4s transform;
+  transform-origin: right;
 }
 
-.theme--night .moon{
-  transform: scale(1) translate(25%, -25%);
+.theme--night {
+  .theme-toggle{
+    background-color: var(--color-primary);
+  }
+
+  .theme-toggle:hover{
+    .moon {
+      transform:  scale(1) translate(-3px, -6px)  ;
+    }
+  }
+
+  .moon {
+    transform:  scale(1) translate(0, -6px);
+  }
+
+  .theme-toggle .sun__ray {
+    height: 0;
+    transition: .4s, transform .4s, height .2s .1s;
+
+    $columns: 12;
+    @for $i from 1 through $columns {
+      &:nth-child(#{$i}) {
+        transform: rotate(calc(calc(#{$i} * calc(360deg / #{$columns})) - 45deg));
+      }
+    }
+  }
+
 }
