--- a/src/sass/components/_tab.scss
+++ b/src/sass/components/_tab.scss
@@ -1,108 +1,146 @@
 
-section {
-  background: rgba(240, 248, 255, .9);
-  height: 100vh;
-  padding: 120px 0;
 
-  @media (max-width: 576px) {
-    padding: 48px 0;
+// ==================
+// variables
+//  ==================
+
+:root {
+  --color-primary: #f1f1f1;
+  --color-primary-light: #152640;
+  --color-secondary: #eec413;
+
+  &.theme--night {
+    --color-primary: #0a192f;
+    --color-primary-light: #152640;
+    --color-secondary: #e684af;
   }
 }
 
-.tab {
+// ==================
+// base
+//  ==================
 
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 24px;
+* {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+// ==================
+// theme-toggle
+//  ==================
+
+body {
+  background: var(--color-primary);
+}
+
+
+.theme-toggle {
+  margin-left: auto;
+  position: fixed;
+  top: 50%;
+  right: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform:  translate(50%, -50%);
+  .sun {
+    background: var(--color-secondary);
+    width: 37px;
+    height: 37px;
+    border-radius: 50%;
+    border: 4px solid var(--color-primary);
   }
 
-  &__item {
-    overflow: hidden;
-    cursor: pointer;
-    padding: 12px 8px;
-    margin-right: 24px;
-    text-shadow: 0 0 .5px currentColor;
-    letter-spacing: 1px;
-    transition: .2s;
-    font-size: 18px;
-    position: relative;
-    color: #777777;
-    background: transparent;
-    border: 0;
-    font-family: inherit;
+  .sun__ray {
+    width: 2px;
+    background: var(--color-secondary);
+    display: block;
+    height: 121%;
+    position: absolute;
+    z-index: -1;
+    transition: .4s all, height .3s ease-in-out;
 
-    @media (max-width: 576px) {
-      margin-right: 16px;
-      font-size: 16px;
-    }
-
-    &:before {
-      content: '';
-      position: absolute;
-      top: 95%;
-      left: 0;
-      height: 2px;
-      width: 100%;
-      background: #19d9b4;
-      transition: .2s;
-      visibility: hidden;
-      opacity: 0;
-    }
-
-    &.is--active, &:focus {
-      color: #444;
-      position: relative;
-      outline: none;
-
-      &:before {
-        visibility: visible;
-        opacity: 1;
+    $columns: 12;
+    @for $i from 1 through $columns {
+      &:nth-child(#{$i}) {
+        transform: rotate(calc(#{$i} * calc(360deg / #{$columns})));
       }
     }
   }
 
-  &__content {
-    padding: 32px;
-    background: #ffffff;
-    border-radius: 0 10px 10px;
 
-    @media (max-width: 576px) {
-      padding: 24px;
+  &:hover .sun__ray {
+    $columns: 12;
+
+    @for $i from 1 through $columns {
+      &:nth-child(#{$i}) {
+        transform: rotate(calc(calc(#{$i} * calc(360deg / #{$columns})) - 20deg));
+      }
     }
-  }
-
-  &__content-item {
-    display: none;
-
-    transition: .3s ease-in-out;
-    visibility: hidden;
-    opacity: 0;
-
-    &.is--active {
-      display: block;
-    }
-
-    &.is--visible {
-      visibility: visible;
-      opacity: 1;
-    }
-  }
-
-  &__content-title {
-    padding-bottom: 24px;
-  }
-
-}
-
-.tab .tab {
-  .tab__item {
-    font-size: 16px;
-  }
-
-  .tab__content {
-    padding: 0;
   }
 }
 
+.moon {
+  height: 28px;
+  width: 28px;
+  position: absolute;
+  background: var(--color-primary);
+  border-radius: 50%;
+  top: 0;
+  right: 0;
+  transform: scale(0) translate(25%, -25%);
+  z-index: 9;
+  transition: .4s transform;
+  transform-origin: right;
+}
 
+.theme--night {
+  .theme-toggle{
+    background-color: var(--color-primary);
+  }
+
+  .theme-toggle:hover{
+    .moon {
+      transform:  scale(1) translate(-3%, -18%)  ;
+    }
+  }
+
+  .moon {
+    transform:  scale(1) translate(11%, -11%);
+  }
+
+  .theme-toggle .sun__ray {
+    height: 0;
+    transition: .4s, transform .4s, height .2s .1s;
+
+    $columns: 12;
+    @for $i from 1 through $columns {
+      &:nth-child(#{$i}) {
+        transform: rotate(calc(calc(#{$i} * calc(360deg / #{$columns})) - 45deg));
+      }
+    }
+  }
+
+}
